--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,7 @@
 
 {% block title %}Error del Servidor{% endblock %}
 
-{% block auth_content %}
+{% block content %}
 <div class="error-page-container">
     <h1>500</h1>
     <h2>Error Interno del Servidor</h2>
